overflow fix

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -511,7 +511,10 @@ $rotZ: 15deg;
     background-color: $brand-color;
     color: $brand-color-invert;
     position: relative;
+    // overflow: hidden;
     h1 {
+        width: 90%; //prevent overflowing on X when skewing
+
         line-height: 1.5;
         transition: transform 3s $cb-ease_out;
         transform: skew(-10deg) rotate(-1.5deg);
